objects/echosign_dev1__SIGN_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>echosign_dev1__Action_Window_Type__c</fullName>
        <description>Determine how Adobe Sign windows open in users&apos; browsers. &apos;Window&apos; - Open in a new windows; &apos;Frame&apos; - Open as a layer on top of the Agreement page; Default/Empty: Auto-detect based on the user&apos;s browser capabilities.</description>
        <inlineHelpText>Determine how Adobe Sign windows open in users&apos; browsers. &apos;Window&apos; - Open in a new windows; &apos;Frame&apos; - Open as a layer on top of the Agreement page; Default/Empty: Auto-detect based on the user&apos;s browser capabilities.</inlineHelpText>
        <label>Action Window Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Add_Audit_PDF_to_Attachment_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether a PDF of the audit trail is attached to the Agreement record after an agreement is signed.</description>
        <inlineHelpText>This setting controls whether a PDF of the audit trail is attached to the Agreement record after an agreement is signed.</inlineHelpText>
        <label>Add Audit PDF to Attachment List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Add_Signed_PDF_Link_to_Agreement__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This setting applies only for pushed agreements sent outside of Salesforce.  Enable this setting to add a link for signed PDF to the Agreement record.</description>
        <inlineHelpText>This setting applies only for pushed agreements sent outside of Salesforce.  Enable this setting to add a link for signed PDF to the Agreement record.</inlineHelpText>
        <label>Add Signed PDF Link for Pushed Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Add_Signed_PDF_Separate_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether the signed agreement is attached to the agreement record as separate PDFs. To stop receiving the signed agreement as a merged PDF, please contact Document Cloud Support.</description>
        <inlineHelpText>This setting controls whether the signed agreement is attached to the agreement record as separate PDFs. To stop receiving the signed agreement as a merged PDF, please contact Document Cloud Support.</inlineHelpText>
        <label>Add Signed PDF as Separate Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Add_Signed_PDF_to_Attachment_List__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This setting applies to agreements sent from outside of Salesforce and pushed into Salesforce. Enable this setting to attach the signed PDF to the Agreement record.</description>
        <inlineHelpText>This setting applies to agreements sent from outside of Salesforce and pushed into Salesforce. Enable this setting to attach the signed PDF to the Agreement record.</inlineHelpText>
        <label>Add Signed PDF for Pushed Agreements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Add_Supporting_PDF_to_Attachment_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether PDF versions of any supporting documents uploaded by signers are attached to the Agreement record after an agreement is signed.</description>
        <inlineHelpText>This setting controls whether PDF versions of any supporting documents uploaded by signers are attached to the Agreement record after an agreement is signed.</inlineHelpText>
        <label>Add Supporting Files to Attachment List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to allow sending agreements on behalf of other users.</description>
        <inlineHelpText>Enable this setting to allow sending agreements on behalf of other users.</inlineHelpText>
        <label>Allow Sending On Behalf of Others</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Auto_Sync_Group_Mappings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to automatically move users to the correct Document Cloud groups when their Salesforce user profiles are updated.</description>
        <inlineHelpText>Enable this setting to automatically move users to the correct Document Cloud groups when their Salesforce user profiles are updated.</inlineHelpText>
        <label>Auto-Sync Group Mappings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Callback_URL_EchoSign_to_Salesforce_Site__c</fullName>
        <description>This setting is the Secure Web Address copied from the Adobe Sign Callback Site which is set up to send large agreements transactions over 2.8MB.  Follow instructions in the installation and configuration guide.</description>
        <inlineHelpText>This setting is the Secure Web Address copied from the Adobe Sign Callback Site which is set up to send large agreements transactions over 2.8MB.  Follow instructions in the installation and configuration guide.</inlineHelpText>
        <label>Callback URL Adobe to Salesforce Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Create_Sign_Deadline_Reminder_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to display Salesforce alerts reminding users when the agreements sent are about to expire. Specify the number of days before agreement expiration that the alert is shown in the Days Sign Deadline Reminder Event setting.</description>
        <inlineHelpText>Enable this setting to display Salesforce alerts reminding users when the agreements sent are about to expire. Specify the number of days before agreement expiration that the alert is shown in the Days Sign Deadline Reminder Event setting.</inlineHelpText>
        <label>Create Sign Deadline Reminder Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Days_Sign_Deadline_Reminder_Event__c</fullName>
        <description>Enter a number of days and enable the Create Deadline Reminder Event setting. This allows ‘agreement about-to-expire alerts’ to be shown to your users in Salesforce. Alerts are shown the specified number of days before agreement expiration.</description>
        <inlineHelpText>Enter a number of days and enable the Create Deadline Reminder Event setting. This allows ‘agreement about-to-expire alerts’ to be shown to your users in Salesforce. Alerts are shown the specified number of days before agreement expiration.</inlineHelpText>
        <label>Days Sign Deadline Reminder Event</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Account_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the account lookup option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the account lookup option for draft agreements.</inlineHelpText>
        <label>Hide Account Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Add_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the add recipient option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the add recipient option for draft agreements.</inlineHelpText>
        <label>Hide Add Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Agreement_Chatter_Feed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to turn off the Chatter feed on the Agreement object.</description>
        <inlineHelpText>Enable this setting to turn off the Chatter feed on the Agreement object.</inlineHelpText>
        <label>Disable Agreement Chatter Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Attach_Agreement_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the option to add Salesforce Documents to draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the option to add Salesforce Documents to draft agreements.</inlineHelpText>
        <label>Hide Salesforce Documents Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Cc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the &apos;Send email copies to:&apos; field for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the &apos;Send email copies to:&apos; field for draft agreements.</inlineHelpText>
        <label>Hide Send Email Copies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Contact_Recipient_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether users can use Contact records as Recipients on Agreements.</description>
        <inlineHelpText>This setting controls whether users can use Contact records as Recipients on Agreements.</inlineHelpText>
        <label>Disable Contact Recipient Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Content_Agreement_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the option to add Salesforce Content or Files to draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the option to add Salesforce Content or Files to draft agreements.</inlineHelpText>
        <label>Hide Salesforce Content/Files Att.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Contract_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the Contract lookup option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the Contract lookup option for draft agreements.</inlineHelpText>
        <label>Hide Contract Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Delete_Agreement_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the delete option for attachments associated with draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the delete option for attachments associated with draft agreements.</inlineHelpText>
        <label>Hide Delete Agreement Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Delete_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the delete recipient option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the delete recipient option for draft agreements.</inlineHelpText>
        <label>Hide Delete Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Edit_Agreement_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the edit option for attachments associated with draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the edit option for attachments associated with draft agreements.</inlineHelpText>
        <label>Hide Edit Agreement Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Email_Recipient_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether users can type in manual Email addresses as Recipients on Agreements.</description>
        <inlineHelpText>This setting controls whether users can type in manual Email addresses as Recipients on Agreements.</inlineHelpText>
        <label>Disable Email Recipient Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Group_Recipient_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether users can use Group records as Recipients on Agreements.</description>
        <inlineHelpText>This setting controls whether users can use Group records as Recipients on Agreements.</inlineHelpText>
        <label>Disable Group Recipient Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Knowledge_Based_Authentication__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to hide the Knowledge Based Authentication (KBA) option for agreements. Powered by RSA, KBA requires signers to provide and verify personal information to sign the document. Usage of this feature is limited and may incur added costs.</description>
        <inlineHelpText>Enable this setting to hide the Knowledge Based Authentication (KBA) option for agreements. Powered by RSA, KBA requires signers to provide and verify personal information to sign the document. Usage of this feature is limited and may incur added costs.</inlineHelpText>
        <label>Disable Knowledge Based Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Layer_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the link which allows senders to &quot;Add Form Field Template&quot; on draft documents.</description>
        <inlineHelpText>Enable this setting to hide the link which allows senders to &quot;Add Form Field Template&quot; on draft documents.</inlineHelpText>
        <label>Hide Ability to Add Field Templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Lead_Recipient_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether users can use Lead records as Recipients on Agreements.</description>
        <inlineHelpText>This setting controls whether users can use Lead records as Recipients on Agreements.</inlineHelpText>
        <label>Disable Lead Recipient Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Opportunity_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the opportunity lookup option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the opportunity lookup option for draft agreements.</inlineHelpText>
        <label>Hide Opportunity Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Preview_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the preview or position option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the preview or position option for draft agreements.</inlineHelpText>
        <label>Hide Preview or Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Replace_Signer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the ability to replace the current signer or approver after the agreement has been sent.</description>
        <inlineHelpText>Enable this setting to hide the ability to replace the current signer or approver after the agreement has been sent.</inlineHelpText>
        <label>Hide Replace Signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Sender_Signs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the sender signs option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the sender signs option for draft agreements.</inlineHelpText>
        <label>Hide Sender Signs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Sign_Expiration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the signing deadline option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the signing deadline option for draft agreements.</inlineHelpText>
        <label>Hide Sign Expiration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Sign_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the signing password option.</description>
        <inlineHelpText>Enable this setting to hide the signing password option.</inlineHelpText>
        <label>Hide Signing Password</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Sign_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the sign reminder option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the sign reminder option for draft agreements.</inlineHelpText>
        <label>Hide Sign Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Signature_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the signature type option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the signature type option for draft agreements.</inlineHelpText>
        <label>Hide Signature Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Sort_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the sort attachments option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the sort attachments option for draft agreements.</inlineHelpText>
        <label>Hide Reorder Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Sort_Recipients__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the sort recipients option for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the sort recipients option for draft agreements.</inlineHelpText>
        <label>Hide Reorder Recipients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Upload_Agreement_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the option to upload local files for draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the option to upload local files for draft agreements.</inlineHelpText>
        <label>Hide Upload Agreement Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_User_Provisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to prevent users from being auto-provisioned with an Adobe user account when they send or manage agreements. This setting does not prevent auto-provisioning of users that occurs when Update Agreement is clicked from the Agreement list.</description>
        <inlineHelpText>Enable this setting to prevent users from being auto-provisioned with an Adobe user account when they send or manage agreements. This setting does not prevent auto-provisioning of users that occurs when Update Agreement is clicked from the Agreement list.</inlineHelpText>
        <label>Disable User Provisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_User_Recipient_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether users can use User records as Recipients on Agreements.</description>
        <inlineHelpText>This setting controls whether users can use User records as Recipients on Agreements.</inlineHelpText>
        <label>Disable User Recipient Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_View_Agreement_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the view option for attachments associated with draft agreements.</description>
        <inlineHelpText>Enable this setting to hide the view option for attachments associated with draft agreements.</inlineHelpText>
        <label>Hide View Agreement Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_View_Password__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to hide the password protection option for signed PDFs.</description>
        <inlineHelpText>Enable this setting to hide the password protection option for signed PDFs.</inlineHelpText>
        <label>Hide Password for Signed PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable_Web_Identity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to hide the Social Identity option for agreements.  Social Identity verification requires signers to verify their identity by signing in to one of the following sites: Facebook, Google, LinkedIn, Twitter, Yahoo! or Microsoft Live.)</description>
        <inlineHelpText>Enable this setting to hide the Web Identity option for agreements.  Web Identity verification requires signers to verify their identity by signing in to one of the following sites: Facebook, Google, LinkedIn, Twitter, Yahoo! or Microsoft Live.)</inlineHelpText>
        <label>Disable Social Identity Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Acceptor_Workflow_Role__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Recipients marked as acceptors accept the document. They may be required to enter data into fields.</description>
        <inlineHelpText>Recipients marked as acceptors accept the document. They may be required to enter data into fields.</inlineHelpText>
        <label>Enable Acceptor Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Certified_Recipient_Workflow_Role__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Recipients marked as certified recipients acknowledge the document. They may be required to enter data into fields.</description>
        <inlineHelpText>Recipients marked as certified recipients acknowledge the document. They may be required to enter data into fields.</inlineHelpText>
        <label>Enable Certified Recipient Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Delegate_Acceptor_Workflow_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recipients marked as &quot;Delegator to Acceptor&quot; may review the document but can&apos;t accept the document. They need to forward the document to another user who may accept the document.</description>
        <inlineHelpText>Recipients marked as &quot;Delegator to Acceptor&quot; may review the document but can&apos;t accept the document. They need to forward the document to another user who may accept the document.</inlineHelpText>
        <label>Enable Delegate Acceptor Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Delegate_CR_Workflow_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recipients marked as &quot;Delegator to Certified Recipient&quot; may review the document but can&apos;t acknowledge the document. They need to forward the document to another user who may acknowledge the document.</description>
        <inlineHelpText>Recipients marked as &quot;Delegator to Certified Recipient&quot; may review the document but can&apos;t acknowledge the document. They need to forward the document to another user who may acknowledge the document.</inlineHelpText>
        <label>Enable Delegate Certified Recipient Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Delegate_FormFiller_Workflow_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recipients marked as &quot;Delegator to Form-Filler&quot; may review the document but can&apos;t fill the document. They need to forward the document to another user who may fill the document.</description>
        <inlineHelpText>Recipients marked as &quot;Delegator to Form-Filler&quot; may review the document but can&apos;t fill the document. They need to forward the document to another user who may fill the document.</inlineHelpText>
        <label>Enable Delegate Form Filler Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_FormFiller_Workflow_Role__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Recipients marked as form-fillers fill the document.</description>
        <inlineHelpText>Recipients marked as form-fillers fill the document.</inlineHelpText>
        <label>Enable Form Filler Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Hosted_Signing_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables the host signing option to obtain in-person signatures</description>
        <inlineHelpText>Enables the host signing option to obtain in-person signatures</inlineHelpText>
        <label>Show Hosted Signing Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Layers_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to show the Adobe Sign form field layer templates that will be applied to documents.</description>
        <inlineHelpText>Enable this setting to show the Adobe Sign form field layer templates that will be applied to documents.</inlineHelpText>
        <label>Show Adobe Sign Field Templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Library_Agreement_Attachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to show the option to add Adobe Sign document templates.</description>
        <inlineHelpText>Enable this setting to show the option to add Adobe Sign document templates.</inlineHelpText>
        <label>Show Adobe Sign Library Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Mapping_Error_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this setting to send the Salesforce admin email notifications when there are merge mapping or data mapping execution errors.</description>
        <inlineHelpText>Enable this setting to send the Salesforce admin email notifications when there are merge mapping or data mapping execution errors.</inlineHelpText>
        <label>Enable Mapping Error Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Phone_Authentication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to show the phone authentication option for verifying recipient identity.  Usage of this feature is limited and may incur added costs.</description>
        <inlineHelpText>Enable this setting to show the phone authentication option for verifying recipient identity.  Usage of this feature is limited and may incur added costs.</inlineHelpText>
        <label>Enable Phone Authentication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Post_Sign_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this option to take your singers to a landing page of your choice. This makes the ‘Post Sign Redirect URL’ and ‘Post Sign Redirect Delay’ options available for Agreements. Signers of an agreement are redirected to the specified URL after they sign.</description>
        <inlineHelpText>Enable this option to take your singers to a landing page of your choice. This makes the ‘Post Sign Redirect URL’ and ‘Post Sign Redirect Delay’ options available for Agreements. Signers of an agreement are redirected to the specified URL after they sign.</inlineHelpText>
        <label>Enable Post Sign Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Recipient_Approver_Role__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Recipients marked as approvers review and approve the document but they are not required to sign it. They may be required to enter data into fields.</description>
        <inlineHelpText>Recipients marked as approvers review and approve the document but they are not required to sign it. They may be required to enter data into fields.</inlineHelpText>
        <label>Enable Recipient Approver Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Recipient_Delegate_Approver_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recipients marked as &quot;Delegator to Approver&quot; may review the document but can&apos;t approve the document. They need to forward the document to another user who may approve the document.</description>
        <inlineHelpText>Recipients marked as &quot;Delegator to Approver&quot; may review the document but can&apos;t approve the document. They need to forward the document to another user who may approve the document.</inlineHelpText>
        <label>Enable Recipient Delegate Approver Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Recipient_Delegate_Signer_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recipients marked as &quot;Delegator to Signer&quot; may review the document but can&apos;t sign the document. They need to forward the document to another user who may sign the document.</description>
        <inlineHelpText>Recipients marked as &quot;Delegator to Signer&quot; may review the document but can&apos;t sign the document. They need to forward the document to another user who may sign the document.</inlineHelpText>
        <label>Enable Recipient Delegate Signer Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Recipient_Security_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to allow each signer to have a different identity verification method. (e.g. password, phone, social identity, KBA)</description>
        <inlineHelpText>Enable this setting to allow each signer to have a different identity verification method. (e.g. password, phone, social identity, KBA)</inlineHelpText>
        <label>Enable Per Signer Identity Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Recipient_Signing_Order_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to show 2 options for recipient signing: serial (ordered entered) or parallel (in any order)</description>
        <inlineHelpText>Enable this setting to show 2 options for recipient signing: serial (ordered entered) or parallel (in any order)</inlineHelpText>
        <label>Show Recipient Signing Order Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Sender_Signs_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to display and enable the ‘Sender Signs Only’/‘Only I sign&apos; option in the Recipients section of the send agreement page.  When the ‘Sender Signs Only’ option is used, the agreement or document is presented to only to the sender to sign.</description>
        <inlineHelpText>Enable this setting to display and enable the ‘Sender Signs Only’/‘Only I sign&apos; option in the Recipients section of the send agreement page.  When the ‘Sender Signs Only’ option is used, the agreement or document is presented to only to the sender to sign</inlineHelpText>
        <label>Enable Sender Signs Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Enable_Separate_Signer_Identity_Methods__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to allow different verification methods (KBA, web identity, password) to be selected for signers internal or external to your Document Cloud account.</description>
        <inlineHelpText>Enable this setting to allow different verification methods (KBA, web identity, password) to be selected for signers internal or external to your Document Cloud account.</inlineHelpText>
        <label>Enable Separate Signer Identity Methods</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>